[gd_scene load_steps=5 format=3 uid="uid://b73gu8naepxt1"]

[ext_resource type="PackedScene" uid="uid://crai0glpdygy7" path="res://game_board/turn_item.tscn" id="1_gh7oy"]
[ext_resource type="Script" path="res://movement_record.gd" id="1_h52wl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4uj1l"]
bg_color = Color(0, 0, 0, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vflhk"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="MovementRecord" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h52wl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4uj1l")

[node name="BackgroundPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 548)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vflhk")

[node name="VAlign" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopBar" type="Control" parent="BackgroundPanel/VAlign"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Title" type="Label" parent="BackgroundPanel/VAlign/TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -8.5
offset_right = 142.0
offset_bottom = 8.5
grow_vertical = 2
text = "Movement Record"

[node name="CloseButton" type="Button" parent="BackgroundPanel/VAlign/TopBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.5
offset_bottom = 8.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "Close"

[node name="Scroll" type="ScrollContainer" parent="BackgroundPanel/VAlign"]
layout_mode = 2
size_flags_vertical = 3

[node name="Turns" type="VBoxContainer" parent="BackgroundPanel/VAlign/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="1" parent="BackgroundPanel/VAlign/Scroll/Turns" instance=ExtResource("1_gh7oy")]
layout_mode = 2
